--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - KONGSI Outdoor Gear Shop</title>
-    <link rel="stylesheet" href="css/login.css"> <!-- Link ke file CSS eksternal -->
+    <link rel="stylesheet" href="login.css"> <!-- Link ke file CSS eksternal -->
 </head>
 <body>
     <div class="login-container">
